Lust lecture updating (Lec-11)